openshift/07-predictive-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dengue-predictive-model
  labels:
    app: dengue-kg
    component: predictive-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dengue-kg
      component: predictive-model
  template:
    metadata:
      labels:
        app: dengue-kg
        component: predictive-model
    spec:
      containers:
      - name: predictive-model
        image: quay.io/wjackson/dengue-kg-predictive-model:latest
        ports:
        - containerPort: 8080
          protocol: TCP
