openshift/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dengue-api # This name is used by other services and the route
  labels:
    app: dengue-kg
    component: api
spec:
  selector:
    app: dengue-kg
    component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
