openshift/08-predictive-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dengue-predictive-model
  labels:
    app: dengue-kg
    component: predictive-model
spec:
  selector:
    app: dengue-kg
    component: predictive-model
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
