openshift/11-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dengue-frontend
  labels:
    app: dengue-kg
    component: frontend
spec:
  selector:
    app: dengue-kg
    component: frontend
  ports:
    - name: http
      port: 8080 # Service port can be 80 or 8080
      targetPort: 8080 # Must match containerPort
      protocol: TCP
  type: ClusterIP
